feat: get posts by user identifier
* doc(api): get posts by user id

* feat: get posts ny user id

* fix: add creation date to payment
