# doc/api.yml
@@ -150,6 +150,48 @@ paths:
         "500":
           $ref: "#/components/responses/500"
 
+  "/users/{id}/posts":
+    get:
+      tags:
+        - User
+      summary: Get all posts of a user
+      operationId: getPostsByUserId
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: number
+        - name: page_size
+          in: query
+          required: false
+          schema:
+            type: number
+      responses:
+        "200":
+          description: List of posts.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Post"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
+
   "/posts":
     get:
       tags:
@@ -568,6 +610,9 @@ components:
           type: integer
         post_id:
           type: string
+        creation_datetime:
+          type: string
+          format: date-time
         from:
           $ref: "#/components/schemas/User"
         to:
